--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jspdf-autotable": "^3.5.31",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-pdf": "^7.3.0",
