--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
+    "react-bootstrap-icons": "^1.10.3",
     "react-calendar": "^4.6.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
