--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-pdf": "^7.3.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.13",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
