--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https://tanishqdigitalnpim.titan.in/UAT_RentalJewApp",
+  "homepage": "https://tanishqdigitalnpim.titan.in/JewRentalApp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,7 +21,7 @@
     "react-icons": "^4.10.1",
     "react-pdf": "^7.3.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-to-print": "^2.14.13",
     "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4",
