--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://tanishqdigitalnpim.titan.in/UAT_RentalJewApp",
   "private": true,
   "dependencies": {
+    "@mui/x-data-grid": "^6.16.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
