--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": "https://tanishqdigitalnpim.titan.in/UAT_RentalJewApp",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.16.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
