--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
+    "framer-motion": "^10.16.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "moment": "^2.29.4",
@@ -23,6 +24,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal-sheet": "^2.2.0",
     "react-pdf": "^7.3.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.14.2",
