--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-to-print": "^2.14.15",
     "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "scripts": {
