--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.16.4",
@@ -33,6 +34,7 @@
     "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.27",
+    "tippy.js": "^6.2.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.2.0"
