--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.2",
     "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.27",
