--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
     "@mui/x-data-grid": "^6.18.1",
@@ -18,6 +19,7 @@
     "framer-motion": "^10.16.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
+    "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.2",
