--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
     "mdb-react-ui-kit": "^7.2.0",
