--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
+    "jszip": "^3.10.1",
     "mdb-react-ui-kit": "^7.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
